Fixed buttons
Monzingo's name pushed it out of the box

--- a/css/main.css
+++ b/css/main.css
@@ -699,7 +699,7 @@ nav {
     margin-right: 10px;
     float:left;
     width:20%;
-    height:270px;
+    height:290px;
     background-color:rgb(232,81,81);
     border: solid 4px #000000;
     border-radius: 2em;
